# KUtils

./: .gitignore  CMakeLists.txt  CMakePresets.json
Include/: Architecture.hpp  BuildMode.hpp  Debug.hpp  Export.hpp  Platform.hpp  Preprocessor.hpp
